# URLcheaker

./: .dvcignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.api  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml  model-validation.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
configs/: data_sources.yaml
data/: sample_urls.csv
data/feeds/: sample_feed.json
docs/: api.md  architecture.md  data-card.md  deployment.md  model-card.md  openapi.json  soc-playbook.md  testing.md  threat-model.md  verification.md
ml/: requirements-ops.txt  requirements.txt
ml/pipelines/: train_pycaret.py  validate_dataset.py
scripts/: import_feed.py  sign_model.py
src/urlchecker/: __init__.py  api.py  cli.py  config.py  database.py  db_models.py  decision_policy.py  features.py  feed_store.py  main.py  middleware.py  model_service.py  repository.py  schemas.py  security.py  services.py  url_normalizer.py
tests/: conftest.py
tests/integration/: test_api.py  test_no_network.py
tests/unit/: test_features.py  test_policy.py  test_security.py  test_url_normalizer.py
web/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts  urlValidation.ts
(+6 files in other folders)
