[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "urlcheaker"
version = "0.1.0"
description = "SOC-oriented malicious URL triage service with threat-feed and ML decision layers."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "URLCHEAKER Team" }]
dependencies = [
  "alembic>=1.14,<2",
  "fastapi==0.139.1",
  "idna>=3.10,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "psycopg[binary]>=3.2,<4",
  "python-json-logger>=3,<4",
  "sqlalchemy==2.0.51",
  "tldextract>=5.1,<6",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.8,<2",
  "httpx>=0.28,<1",
  "hypothesis>=6.120,<7",
  "mypy>=1.14,<2",
  "pip-audit>=2.7,<3",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
urlchecker = "urlchecker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/urlchecker"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.bandit]
exclude_dirs = ["tests", "web"]
skips = ["B101"]
